# ltiautotest

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
lti/: README.md  __init__.py  codegen.py  const.py  contentitem.py  delete.json  gen_model.py  jwks.py  ltiplatform.py  ltiregistration.py  messages.py  model.py  requirements.txt  services.py  spi.py  utils.py
lti/tests/: test_contentitem.py  test_ltidict.py  test_messages.py  test_services.py
robotest/: __init__.py  log  main.py  min_requirements.txt  requirements.txt  startup.sh  stop.sh  test_results.py
robotest/assets/: robotest_in_a_box.imscc
robotest/static/: robottest.css
robotest/templates/: broken.html  checkcookieoidc.html  deeplink_autopost.html  launchspa.html  moodleinstructions.html  oidcinit.html  registration_completed.html  results.html
robotest_in_a_box/: imsmanifest.xml
robotest_in_a_box/i_384733d0/: basiclti.xml
robotest_in_a_box/i_384733d0dev/: basiclti.xml
static/: robottest.css
templates/: deeplink_autopost.html  index.html  results.html
